--- a/styles/jquery.fancybox.css
+++ b/styles/jquery.fancybox.css
@@ -76,7 +76,7 @@
 }
 
 #fancybox-loading, .fancybox-close, .fancybox-prev span, .fancybox-next span {
-	background-image: url('imgs/fancybox_sprite.png');
+	/*background-image: url('imgs/fancybox_sprite.png');*/
 }
 
 #fancybox-loading {
@@ -185,7 +185,7 @@
 	display: none;
 	z-index: 8010;
 	background: url('imgs/fancybox_overlay.png');
-	opacity:0.3;
+	opacity:0;
 }
 
 .fancybox-overlay-fixed {
