--- a/styles/style-ie.css
+++ b/styles/style-ie.css
@@ -2,7 +2,7 @@ html, body{
   margin: 0;
   padding-left: 0;
   background-color: White; 
-font-family: "Courier New",monospace, sans-serif;
+font-family: "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif; 
   font-style: normal;
   font-weight: 400;
   color: #7b7b7a;
