--- a/styles/style.css
+++ b/styles/style.css
@@ -201,7 +201,7 @@ audio{
 ===========================*/
 .gallery{
 	padding-top:1%;
-	  line-height: 15px;
+	line-height: 15px;
 }
 
 .gallery a{
@@ -237,7 +237,7 @@ audio{
 		}
 		
 		.container .image{
-			width:100%;
+			height:50%;
 		}
 		
 		.container iframe{
@@ -280,7 +280,7 @@ audio{
 		}
 		
 		.container .image{
-			width: 95%;
+			height: 30%;
 		}
 		
 		.container iframe{
@@ -324,7 +324,7 @@ audio{
 		}
 		
 		.container .image{
-			width: 645px;
+			height: 30%;
 		}
 		
 		.container iframe{
