--- a/styles/style.css
+++ b/styles/style.css
@@ -122,7 +122,7 @@ text-align:center;
 
 .container .image{
     width: 645px;
-    height: auto;
+    max-height: 50%;
     margin-left: auto;
     margin-right: auto;
     margin-top: 10px;
