--- a/styles/style.css
+++ b/styles/style.css
@@ -121,8 +121,8 @@ text-align:center;
  }
 
 .container .image{
-    width: 645px;
-    max-height: 50%;
+    max-width: 645px;
+    max-height: 500px;
     margin-left: auto;
     margin-right: auto;
     margin-top: 10px;
