--- a/styles/style.css
+++ b/styles/style.css
@@ -121,8 +121,7 @@ text-align:center;
  }
 
 .container .image{
-    max-width: 645px;
-    max-height: 500px;
+    max-width: 100%;
     margin-left: auto;
     margin-right: auto;
     margin-top: 10px;
