--- a/styles/style.css
+++ b/styles/style.css
@@ -121,7 +121,8 @@ text-align:center;
  }
 
 .container .image{
-    max-width: 100%;
+    width: 645px;
+    height: auto;
     margin-left: auto;
     margin-right: auto;
     margin-top: 10px;
